--- a/CoreDataTest/Base.lproj/Main.storyboard
+++ b/CoreDataTest/Base.lproj/Main.storyboard
@@ -32,11 +32,17 @@
                                 <state key="normal" title="Save">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="save:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="UIj-6e-C9O"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="nameTextField" destination="7IN-66-885" id="AOx-T9-BYV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
@@ -51,7 +57,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="fY1-Oh-czR">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="fY1-Oh-czR">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fY1-Oh-czR" id="VpG-2l-1cd">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -66,7 +72,7 @@
                     <navigationItem key="navigationItem" id="SBw-yk-53V">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="hlz-mm-7ew">
                             <connections>
-                                <segue destination="vXZ-lx-hvc" kind="show" id="62O-4E-iIL"/>
+                                <segue destination="vXZ-lx-hvc" kind="show" identifier="addPerson" id="62O-4E-iIL"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
